objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Incumbent_Program__c</fullName>
        <description>Picklist on Opportunity to determine if incumbent program is managed or unmanaged</description>
        <inlineHelpText>Is the incumbent program managed or unmanaged?  None is not an option when an Opportunity is Closed Won.</inlineHelpText>
        <label>Incumbent Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed</fullName>
                </value>
                <value>
                    <fullName>Unmanaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Notes__c</fullName>
        <inlineHelpText>Enter any info you know about this opportunity - such as details about the incumbent agency, others bidding, known pricing, and so on. If this opportunity is being worked by multiple sales people, include notes on the split sale.</inlineHelpText>
        <label>Opportunity Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verbal_Award_Date__c</fullName>
        <description>Date the Verbal Award was recieved for this Opportunity</description>
        <inlineHelpText>If a Verbal Award was recieved, please complete the date this occurred.</inlineHelpText>
        <label>Verbal Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Hotel_Spend__c</fullName>
        <label>Annual Hotel Spend - NORAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CB_M_E_Opportunity__c</fullName>
        <inlineHelpText>Is there an M&amp;E opportunity</inlineHelpText>
        <label>CB M&amp;E Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CB_Technology_Gaps__c</fullName>
        <inlineHelpText>Do they have technology gaps?  List tools we should propose</inlineHelpText>
        <label>CB Technology Gaps</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Company__c</fullName>
        <inlineHelpText>Please enter in the consulting company that is leading or engaged with you on this opportunity. If the company is not visible in this list, please reach out to Gina Zappa to have it added.</inlineHelpText>
        <label>Consulting Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Acquis Consulting Group</fullName>
                </value>
                <value>
                    <fullName>Areka Consulting</fullName>
                </value>
                <value>
                    <fullName>Bain &amp; Company</fullName>
                </value>
                <value>
                    <fullName>Bostong Consulting Group</fullName>
                </value>
                <value>
                    <fullName>Conductiv</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>Diane McNally Consulting</fullName>
                </value>
                <value>
                    <fullName>E&amp;Y</fullName>
                </value>
                <value>
                    <fullName>Festive Road</fullName>
                </value>
                <value>
                    <fullName>Garner Consulting</fullName>
                </value>
                <value>
                    <fullName>Global Travel and Aviation Solutitions</fullName>
                </value>
                <value>
                    <fullName>Gold Spring Consulting</fullName>
                </value>
                <value>
                    <fullName>Huron</fullName>
                </value>
                <value>
                    <fullName>K2 Sourcing</fullName>
                </value>
                <value>
                    <fullName>KesselRun</fullName>
                </value>
                <value>
                    <fullName>KPMG</fullName>
                </value>
                <value>
                    <fullName>Lyndon Group</fullName>
                </value>
                <value>
                    <fullName>McKinsey &amp; Company</fullName>
                </value>
                <value>
                    <fullName>Nina &amp; Pinta</fullName>
                </value>
                <value>
                    <fullName>Partnership Travel Consulting</fullName>
                </value>
                <value>
                    <fullName>Procurigence</fullName>
                </value>
                <value>
                    <fullName>PWC</fullName>
                </value>
                <value>
                    <fullName>Results Plus</fullName>
                </value>
                <value>
                    <fullName>TCG Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Travel Management Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Partner_Led__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Partner Led</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <inlineHelpText>This auto-populates when your contact record is noted with the Lead Source Detail (specific name or detail). If nothing appears on the OPPORTUNITY simply update your CONTACT record. Then, click Edit &amp; Save on the Opportunity &amp; the data will appear.</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Commission__c</fullName>
        <label>Meeting Commission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Earned</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Next_Steps__c</fullName>
        <label>Meeting Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OMNIA_Relationship__c</fullName>
        <inlineHelpText>Please confirm which scenario this opportunity relates to, specific to OMNIA Partners (formerly Corporate United).</inlineHelpText>
        <label>OMNIA Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OMNIAMember - bidding within OMNIA Model</fullName>
                    <label>OMNIA Member - bidding within OMNIA Model</label>
                </value>
                <value>
                    <fullName>OMNIA Prospect - bidding in conjunction with OMNIA Sales</fullName>
                </value>
                <value>
                    <fullName>OMNIA Member - bidding outside OMNIA Model</fullName>
                </value>
                <value>
                    <fullName>OMNIA Prospect - NOT bidding in conjunction with OMNIA Sales</fullName>
                </value>
                <value>
                    <fullName>N/A - not being sold in partnership with OMNIA Sales</fullName>
                    <default>true</default>
                    <label>N/A - not being sold in partnership with OMNIA Sales</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acquisition Integration / Lead Source Unknown</fullName>
                </value>
                <value>
                    <fullName>ATPI</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Concur Referral</fullName>
                </value>
                <value>
                    <fullName>Conference/Trade Show</fullName>
                </value>
                <value>
                    <fullName>Creative Group</fullName>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                </value>
                <value>
                    <fullName>Deem</fullName>
                </value>
                <value>
                    <fullName>DT Customer</fullName>
                </value>
                <value>
                    <fullName>DT Executive</fullName>
                </value>
                <value>
                    <fullName>DT Prospect</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Enterprise Referral</fullName>
                </value>
                <value>
                    <fullName>Global Partner</fullName>
                </value>
                <value>
                    <fullName>Industry/Supplier Networking</fullName>
                </value>
                <value>
                    <fullName>Industry Affiliation</fullName>
                    <isActive>false</isActive>
                    <label>Industry Affiliation</label>
                </value>
                <value>
                    <fullName>Industry Consultant</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Lenser &amp; Associates</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaigns</fullName>
                </value>
                <value>
                    <fullName>MassBio Council</fullName>
                </value>
                <value>
                    <fullName>OMNIA Partners (formerly CU)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Referral</fullName>
                </value>
                <value>
                    <fullName>PartnerTap</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Rocketrip</fullName>
                </value>
                <value>
                    <fullName>SalesHive</fullName>
                </value>
                <value>
                    <fullName>Self Generated</fullName>
                </value>
                <value>
                    <fullName>Social Media Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_1_Due_Date__c</fullName>
        <label>Project 1 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_2_Due_Date__c</fullName>
        <label>Project 2 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_3_Due_Date__c</fullName>
        <label>Project 3 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targeted_Ops_Owner__c</fullName>
        <description>Anticipated Ops Owner on a new Opportunity</description>
        <label>Targeted Ops Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_2__c</fullName>
        <inlineHelpText>Select which sales leader is assisting on the Avenir Opportunity.</inlineHelpText>
        <label>Account Executive 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chris Welch</fullName>
                </value>
                <value>
                    <fullName>David Breslin</fullName>
                </value>
                <value>
                    <fullName>DJ Greenagel</fullName>
                </value>
                <value>
                    <fullName>Fred Dallenbach</fullName>
                </value>
                <value>
                    <fullName>Ian Race</fullName>
                </value>
                <value>
                    <fullName>James Tornatore</fullName>
                </value>
                <value>
                    <fullName>Jim Oakes</fullName>
                </value>
                <value>
                    <fullName>Joanne Perkins</fullName>
                    <isActive>false</isActive>
                    <label>Joanne Perkins</label>
                </value>
                <value>
                    <fullName>Jonathan Scher</fullName>
                </value>
                <value>
                    <fullName>Jordan Jones</fullName>
                </value>
                <value>
                    <fullName>Maria Portell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Transactions__c</fullName>
        <inlineHelpText>Air Transactions</inlineHelpText>
        <label>Annual Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Awarded_To__c</fullName>
        <inlineHelpText>Who won the business?</inlineHelpText>
        <label>Business Awarded To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>Abbey Travel</fullName>
                </value>
                <value>
                    <fullName>Able Travel</fullName>
                </value>
                <value>
                    <fullName>Account will not disclose</fullName>
                </value>
                <value>
                    <fullName>Action Travel</fullName>
                </value>
                <value>
                    <fullName>Adelman Travel</fullName>
                </value>
                <value>
                    <fullName>ADTRAV</fullName>
                </value>
                <value>
                    <fullName>Altour</fullName>
                </value>
                <value>
                    <fullName>American Express Global Travel</fullName>
                </value>
                <value>
                    <fullName>AmTrav</fullName>
                </value>
                <value>
                    <fullName>Anthony Travel</fullName>
                </value>
                <value>
                    <fullName>Ascendas</fullName>
                </value>
                <value>
                    <fullName>Atlas_Travel</fullName>
                    <label>Atlas Travel</label>
                </value>
                <value>
                    <fullName>Austin Travel</fullName>
                </value>
                <value>
                    <fullName>Balboa Travel</fullName>
                </value>
                <value>
                    <fullName>BCD - Affiliate</fullName>
                </value>
                <value>
                    <fullName>BCD - Corporate</fullName>
                </value>
                <value>
                    <fullName>BCD - World Travel Partners</fullName>
                </value>
                <value>
                    <fullName>Blockskye</fullName>
                </value>
                <value>
                    <fullName>Blue Ribbon (AX Affiliate)</fullName>
                </value>
                <value>
                    <fullName>BTI</fullName>
                </value>
                <value>
                    <fullName>Cadence Travel</fullName>
                </value>
                <value>
                    <fullName>Cain Travel</fullName>
                </value>
                <value>
                    <fullName>Campbell</fullName>
                </value>
                <value>
                    <fullName>Carlson Wagonlit Travel</fullName>
                </value>
                <value>
                    <fullName>Carrousel</fullName>
                </value>
                <value>
                    <fullName>Casto Travel</fullName>
                </value>
                <value>
                    <fullName>Chima Travel</fullName>
                </value>
                <value>
                    <fullName>Christopherson</fullName>
                </value>
                <value>
                    <fullName>CI Azumano Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CB_Current_Adoption__c</fullName>
        <label>CB Current Adoption</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_DT_Primary_Value__c</fullName>
        <inlineHelpText>What is Direct Travel&apos;s primary value proposition?</inlineHelpText>
        <label>CB DT Primary Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_Program_Mandated__c</fullName>
        <label>CB Program Mandated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canadian_Air_Volume__c</fullName>
        <label>Canadian Air Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meeting_Destination__c</fullName>
        <label>Meeting Destination</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Air_Intl__c</fullName>
        <inlineHelpText>What percentage of the NORAM-based volume is outbound international?</inlineHelpText>
        <label>Percentage Air - Intl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Executive_VP__c</fullName>
        <inlineHelpText>Select which VP is assisting on the Avenir Opportunity.</inlineHelpText>
        <label>Account Executive - VP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Karin Carbaugh</fullName>
                </value>
                <value>
                    <fullName>Richie Lentz</fullName>
                </value>
                <value>
                    <fullName>Jami Braysen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Program_Name__c</fullName>
        <label>Meeting Program Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Sales_Person__c</fullName>
        <label>Meeting Sales Person</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Pain_Points__c</fullName>
        <label>Prospect Pain Points</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_Areas_of_Alignment__c</fullName>
        <inlineHelpText>What are our areas of alignment with the client</inlineHelpText>
        <label>CB Areas of Alignment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Early_Adopter_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Adopter Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <description>Information from Implementation Team via Smartsheet on status for reporting</description>
        <inlineHelpText>This field will be filled in by the Implementation team and reflects the STATUS of their project. Note: &quot;Pipeline&quot; will appear if there&apos;s a delay in the Implementation Pipeline - such as the Implementatin team awaiting the signed contract, resources, client delays, etc.</inlineHelpText>
        <label>Implementation Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_PT_SF_Oppty_ID__c</fullName>
        <label>Legacy PT SF Oppty ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Payment_Final__c</fullName>
        <label>Meeting Payment - Final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_OBT_Adoption__c</fullName>
        <label>Prospect - OBT Adoption</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check box field used in flows to bypass validation rules</description>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COPY_Client_Since_Date__c</fullName>
        <formula>Account.Client_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COPY Client Since Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Program_Budget__c</fullName>
        <label>Meeting Program Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Won_Reason__c</fullName>
        <description>Text field used to describe reason an Opportunity was Won</description>
        <inlineHelpText>Why did we win this Opportunity?</inlineHelpText>
        <label>Opportunity Won Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Proposal_Sent_Date__c</fullName>
        <description>Date RFP/Proposal was submitted to prospect.</description>
        <label>RFP/Proposal Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>U_S_Based_Transactions__c</fullName>
        <label>U.S. Based Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATPI_Sales_Team_Members__c</fullName>
        <label>ATPI Sales Team Member(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Archan Bahulekar</fullName>
                </value>
                <value>
                    <fullName>Camilla Darling</fullName>
                </value>
                <value>
                    <fullName>Ettienne de Swardt</fullName>
                </value>
                <value>
                    <fullName>James Draper</fullName>
                </value>
                <value>
                    <fullName>James Griffin</fullName>
                </value>
                <value>
                    <fullName>Jochem Hemink</fullName>
                </value>
                <value>
                    <fullName>John Harding</fullName>
                </value>
                <value>
                    <fullName>Jonothan Lowney</fullName>
                </value>
                <value>
                    <fullName>Judy Peplinski</fullName>
                </value>
                <value>
                    <fullName>Julian Mills</fullName>
                    <isActive>false</isActive>
                    <label>Julian Mills</label>
                </value>
                <value>
                    <fullName>Katie Skitterall</fullName>
                </value>
                <value>
                    <fullName>Kelly Jones</fullName>
                </value>
                <value>
                    <fullName>Liz Brown</fullName>
                </value>
                <value>
                    <fullName>Matt Grainger</fullName>
                </value>
                <value>
                    <fullName>Michel Habich</fullName>
                </value>
                <value>
                    <fullName>Nikos Gazelidis</fullName>
                </value>
                <value>
                    <fullName>Stacey Armetta</fullName>
                    <isActive>false</isActive>
                    <label>Stacey Armetta</label>
                </value>
                <value>
                    <fullName>Suresh Makhija</fullName>
                </value>
                <value>
                    <fullName>Tristan Hindley</fullName>
                </value>
                <value>
                    <fullName>Vishal Sawant</fullName>
                </value>
                <value>
                    <fullName>Yvette Robles</fullName>
                </value>
                <value>
                    <fullName>Zara Higgins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Profit_Amount__c</fullName>
        <description>This field has been created for Amount Calculation and is visible on type = Meetings.</description>
        <label>Estimated Profit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Addl_Best_Case__c</fullName>
        <label>Forecast Addl Best Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Comments__c</fullName>
        <label>Implementation Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Payment_Deposit__c</fullName>
        <label>Meeting Payment - Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meeting_Program_Manager__c</fullName>
        <label>Meeting Program Manager</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amanda Card</fullName>
                </value>
                <value>
                    <fullName>Amy Nunez</fullName>
                </value>
                <value>
                    <fullName>Anna Hughes</fullName>
                </value>
                <value>
                    <fullName>Anna LaVenture</fullName>
                </value>
                <value>
                    <fullName>Anne Marie Rogers</fullName>
                </value>
                <value>
                    <fullName>Barry Salvi</fullName>
                </value>
                <value>
                    <fullName>Bethany Courchene</fullName>
                </value>
                <value>
                    <fullName>Bette Zicchino</fullName>
                </value>
                <value>
                    <fullName>Chris Taylor</fullName>
                </value>
                <value>
                    <fullName>Elaine Guy</fullName>
                </value>
                <value>
                    <fullName>Emily Dunn</fullName>
                </value>
                <value>
                    <fullName>Gabrielle Martinez</fullName>
                </value>
                <value>
                    <fullName>Hanna Wardlow</fullName>
                </value>
                <value>
                    <fullName>Heather Miller</fullName>
                </value>
                <value>
                    <fullName>Janice Scalia</fullName>
                </value>
                <value>
                    <fullName>Jenna Turner</fullName>
                </value>
                <value>
                    <fullName>Jim Lowery</fullName>
                </value>
                <value>
                    <fullName>Jodi Marschhauser</fullName>
                </value>
                <value>
                    <fullName>Julie Hinkle</fullName>
                </value>
                <value>
                    <fullName>Kari Isaacson</fullName>
                </value>
                <value>
                    <fullName>Laura Iacono</fullName>
                </value>
                <value>
                    <fullName>Lindsey Davis</fullName>
                </value>
                <value>
                    <fullName>Liz McCormick</fullName>
                </value>
                <value>
                    <fullName>Madison Cyr</fullName>
                </value>
                <value>
                    <fullName>Mary Bailey</fullName>
                </value>
                <value>
                    <fullName>Patrick Craven</fullName>
                </value>
                <value>
                    <fullName>Sarah French</fullName>
                </value>
                <value>
                    <fullName>Stacey Perez</fullName>
                </value>
                <value>
                    <fullName>Suzanne Buckley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Steps_Last_Updated__c</fullName>
        <description>Timestamp for entry made into Oppty Next Steps field</description>
        <label>Next Steps Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lost_Reason__c</fullName>
        <label>Opportunity Lost/Invalid Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>After-Hours</fullName>
                </value>
                <value>
                    <fullName>Company Suspended</fullName>
                </value>
                <value>
                    <fullName>Declined ATPI</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Global Capabilities</fullName>
                </value>
                <value>
                    <fullName>Inherited from Previous Seller (Not Valid)</fullName>
                </value>
                <value>
                    <fullName>Meeting Cancelled</fullName>
                </value>
                <value>
                    <fullName>Meeting Postponed</fullName>
                </value>
                <value>
                    <fullName>DT No Bid</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Stayed Unconsolidated</fullName>
                </value>
                <value>
                    <fullName>Stayed with Incumbent</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>2023 Audit</fullName>
                </value>
                <value>
                    <fullName>NDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CB_Service_Configuration__c</fullName>
        <label>CB Service Configuration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Opportunity_Date__c</fullName>
        <formula>ABS( Contact_Name__r.CreatedDate -  CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates the number of days from when a Contact was created to when an Opportunity was created. This is a locked field and can&apos;t be edited.</inlineHelpText>
        <label>Contact-Opportunity Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Program_Comments__c</fullName>
        <label>Meeting Program Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>